增加依赖的zepto

--- a/test/just-alert_test.html
+++ b/test/just-alert_test.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="../dist/css/just-alert.min.css">
 </head>
 <body>
+    <script src="http://cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
     <script src="../dist/just-alert.min.js"></script>
     <script type="text/javascript">
         console.log(justJs);
